src/Pages/Welcome/components/MainCover/styles.module.scss
@import url("https://fonts.googleapis.com/css?family=Inter");

.wcover--main-container {
  padding: 25px;
  margin-bottom: 50px;
  overflow-x: hidden;
}
.wcover--graph-heading-container {
  min-height: 800px;
  display: flex;
  // padding: 0px 20px;
  gap: 20px;
  width: 100%;
}
.wcover--logo-graph-container {
  flex: 1;
}
.wcover--logo {
  height: 100px;
  margin-left: 10px;
}
.wcover--heading-text {
  font-family: Epilogue;
  font-size: 46px;
  font-weight: 400;
  line-height: 72px;
  letter-spacing: -0.03em;
  text-align: left;
  color: #1e1e1e;
}
.wcover--graph-heading-inner-container {
  padding-left: 20px;
}
.wcover--button-container {
  display: flex;
  gap: 20px;
}
.wcover--signup-button {
  background-color: #2d355c;
  border: none;
  height: 45px;
  width: 115px;
  border-radius: 5px;
  color: white;
  font-family: Epilogue;
  font-size: 15px;
  font-weight: 500;
  line-height: 24px;
  letter-spacing: -0.02em;
  text-align: center;
}
.wcover--login-button {
  background-color: transparent;
  height: 45px;
  width: 115px;
  border: 2px solid #3064d4;
  color: #3064d4;
  border-radius: 5px;
  font-family: Epilogue;
  font-size: 15px;
  font-weight: 500;
  line-height: 24px;
  letter-spacing: -0.02em;
  text-align: center;
}
.wcover--graph-container {
  background: #0e56f014;
  margin-top: 30px;
  border-radius: 30px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  //   align-items: center;
  padding: 40px;
  font-family: Inter;
  font-size: 14px;
  font-weight: 600;
  line-height: 21px;
  gap: 20px;
  text-align: left;
  max-width: 400px;
  height: 200px;
  padding-left: 70px;
  padding-right: 50px;
}

.wcover--image-desc-container {
  flex: 1.2;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}
.wcover--cover-image {
  width: 100%;
  position: relative;
  background-color: #2d355c;
  border-radius: 20px;
  height: 500px;
}
.wcover--cover-image-inner {
  position: absolute;

  background-image: url("./images/welcome-cover-image.png");
  // background-size: cover;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  width: 120%;
  height: 110%;
  left: -100px;
  // background-position: 10%;
}
.wcover--rectangles,
.wcover--bottom-rectangles-vertical-1,
.wcover--bottom-rectangles-vertical-2,
.wcover--bottom-rectangles-vertical-3,
.wcover--bottom-rectangles-vertical-4 {
  position: absolute;
  background: linear-gradient(
    270.99deg,
    rgba(8, 42, 164, 0.5) -33.44%,
    rgba(255, 255, 255, 0.2) 61.93%
  );
  box-shadow: 0px 20px 40px 0px #0000001a;
  border: 1px solid
    linear-gradient(
      115.39deg,
      rgba(255, 255, 255, 0.6) 0%,
      rgba(255, 255, 255, 0) 106.35%
    );
}
.wcover--desc-text {
  max-width: 550px;
  font-family: Epilogue;
  font-size: 18px;
  font-weight: 400;
  align-self: center;
  line-height: 27px;
  //   letter-spacing: -0.03em;
  color: #1e1e1e;
}
.wcover--bottom-rectangles-vertical-1 {
  top: 450px;
  left: 100px;
  height: 40px;
  width: 30px;
  border-radius: 15px;
}
.wcover--bottom-rectangles-vertical-2 {
  top: 450px;
  right: 50px;
  height: 100px;
  width: 100px;
  border-radius: 15px;
}
.wcover--bottom-rectangles-vertical-3 {
  top: 300px;
  left: 20px;
  height: 30px;
  width: 50px;
  border-radius: 15px;
}
.wcover--bottom-rectangles-vertical-4 {
  top: 20px;
  left: 40px;
  height: 100px;
  width: 150px;
  border-radius: 15px;
}
@media (max-width: 1180px) {
  .wcover--cover-image-inner {
    height: 100%;
    top: 50px;
  }
}
@media (max-width: 1100px) {
  .wcover--cover-image-inner {
    height: 100%;
    min-width: 130%;
    top: 50px;
  }
}
@media (max-width: 1050px) {
  .wcover--cover-image-inner {
    height: 90%;
    min-width: 130%;
    top: 50px;
  }
  .wcover--bottom-rectangles-vertical-2 {
    top: 420px;
    right: 30px;
  }
}

@media (max-width: 1000px) {
  .wcover--graph-heading-container {
    min-height: 0;
    height: 700px;
  }
  .wcover--graph-heading-inner-container {
    padding: 0;
  }
  .wcover--image-desc-container {
    gap: 30px;
  }
  .wcover--heading-text {
    font-size: 35px;
    line-height: 50px;
  }
  .wcover--cover-image-inner {
    height: 100%;
    min-width: 140%;
    top: 40px;
  }
  .wcover--bottom-rectangles-vertical-2 {
    top: 300px;
    right: 30px;
  }
  .wcover--bottom-rectangles-vertical-1 {
    top: 200px;
  }
}
@media (max-width: 950px) {
  .wcover--bottom-rectangles-vertical-2 {
    top: 270px;
    right: 10px;
  }
}
@media (max-width: 930px) {
  .wcover--heading-text {
    font-size: 45px;
  }
  .wcover--logo {
    height: 120px;
  }
  .wcover--graph-heading-container {
    flex-direction: column;
  }
  .wcover--logo-graph-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .wcover--image-desc-container {
    gap: 50px;
  }
  .wcover--main-container {
    margin-bottom: 100px;
  }
  .wcover--graph-container {
    display: none;
  }
  .wcover--heading-text {
    text-align: center;
  }
  .wcover--graph-heading-inner-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .wcover--cover-image {
    height: 300px;
    width: 90%;
  }
  .wcover--cover-image-inner {
    height: 110%;
    top: 0px;
    left: -40px;
    min-width: 0;
    max-width: 100%;
    // display: none;
  }
  .wcover--bottom-rectangles-vertical-1 {
    top: 250px;
  }
  .wcover--bottom-rectangles-vertical-2 {
    top: 230px;
  }
  .wcover--bottom-rectangles-vertical-3 {
    top: 200px;
  }
}
@media (max-width: 650px) {
  .wcover--heading-text {
    text-align: left;
  }
  .wcover--graph-heading-inner-container {
    justify-content: left;
    align-items: start;
  }
  .wcover--cover-image {
    height: 300px;
    width: 100%;
  }
}
@media (max-width: 570px) {
  .wcover--main-container {
    margin-bottom: 200px;
  }
}
@media (max-width: 500px) {
  .wcover--main-container {
    margin-bottom: 300px;
  }
}
@media (max-width: 475px) {
  .wcover--heading-text {
    font-size: 35px;
  }
}
@media (max-width: 440px) {
  .wcover--heading-text {
    font-size: 30px;
  }
  .wcover--cover-image-inner {
    height: 110%;
    top: 0px;
    left: -40px;
    min-width: 0;
    max-width: 110%;
    // display: none;
  }
}
@media (max-width: 385px) {
  .wcover--heading-text {
    font-size: 25px;
  }
  .wcover--desc-text {
    font-size: 12px;
    line-height: 20px;
  }
  .wcover--main-container {
    margin-bottom: 60px;
  }
  .wcover--logo {
    height: 80px;
  }
}
@media (max-width: 350px) {
  .wcover--login-button,
  .wcover--signup-button {
    width: 90px;
  }
  .wcover--main-container {
    padding-top: 10px;
  }
  .wcover--cover-image-inner {
    height: 100%;
    top: 30px;
    left: -50px;
    min-width: 0;
    max-width: 130%;
    // display: none;
  }
}
@media (max-width: 330px) {
  .wcover--heading-text {
    font-size: 22px;
  }
  .wcover--main-container {
    margin-bottom: 100px;
  }
}
@media (max-width: 310px) {
  .wcover--cover-image {
    height: 200px;
    width: 100%;
  }
  .wcover--desc-text {
    font-size: 10px;
    line-height: 15px;
  }
  .wcover--main-container {
    margin-bottom: -20px;
  }
  .wcover--bottom-rectangles-vertical-1 {
    top: 150px;
  }
  .wcover--bottom-rectangles-vertical-2 {
    height: 50px;
    top: 170px;
    width: 50px;
  }
  .wcover--bottom-rectangles-vertical-3 {
    top: 150px;
  }
  .wcover--cover-image-inner {
    top: 20px;
  }
  .wcover--bottom-rectangles-vertical-4 {
    height: 60px;
    width: 60px;
    top: 5px;
    left: 10px;
  }
}

@media (max-width: 275px) {
  .wcover--login-button,
  .wcover--signup-button {
    width: 70px;
    height: 30px;
    font-size: 12px;
  }
  .wcover--main-container {
    margin-top: 0px;
    margin-bottom: -100px;
  }
  .wcover--heading-text {
    font-size: 18px;
    line-height: 40px;
  }
  .wcover--logo {
    height: 70px;
  }
  .wcover--logo-graph-container {
    margin-top: 0px;
    max-height: 250px;
    padding-top: 0px;
  }
  .wcover--graph-heading-container {
    margin-bottom: 0;
    padding: 0;
    max-height: 100%;
  }
  .wcover--image-desc-container {
    flex: 0;
    gap: 30px;
    margin-bottom: 0;
  }
}
@media (max-width: 250px) {
  .wcover--heading-text {
    font-size: 15px;
    line-height: 30px;
  }
  .wcover--main-container {
    margin-bottom: -60px;
  }
  .wcover--cover-image-inner {
    width: 140%;
  }
}

